# speaker_diarization

./: README_UI.md  alignment_compat.py  app_api.py  app_new.py  diarize.py  diarize_parallel.py  ecosystem.config.js  index.html  pyproject.toml  report.md  requirements.txt  speaker_identification.py  start_server.sh  test_AI.txt  ui.html
.qwen/: settings.json
data/processed/: bd3dfcac4ce140b48077e36836977fe9_Phỏng vấn Thực Tập Sinh Marketing ngày 02_08_2022 [ilCGKjR6kmc] (1).txt  c89b5a4ac5b84192a4987ba407fb2036_test_AI.txt
data/speaker_references/: .speaker_embeddings_cache.npz
static/: index.html
