[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-diarization"
version = "1.0.0"
description = "Whisper Transcription with NeMo Speaker Diarization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.8.0,<4.0.0",
    "omegaconf>=2.3.0,<3.0.0",
    "faster-whisper>=1.0.0,<2.0.0",
    "ctc-forced-aligner>=1.0.2,<2.0.0",
    "deepmultilingualpunctuation>=1.0.0,<2.0.0",
    "nemo-toolkit[asr]>=2.5.0,<3.0.0",
    "demucs>=4.0.0,<5.0.0",
    "soundfile>=0.12.0,<1.0.0",
    "numpy>=1.23.0,<2.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[project.scripts]
whisper-diarize = "diarize:main"

[tool.ruff]
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E731"]

[tool.ruff.lint.isort]
lines-between-types = 1
